--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,23 +7,22 @@ on:
 env:
   IMAGE_NAME: jojodocker10/laravel-application
   IMAGE_TAG: latest
+  MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+  MYSQL_DATABASE: ${{ vars.MYSQL_DATABASE }}
 
 jobs:
   test-laravel-app:
     runs-on: ubuntu-latest
-    env:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
     services:
       mysql:
         image: mysql:5:7
-        alias: db
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Install and setup laravel dependencies
       run: |
-        cp $ENV_FILE .env.example
+        cat ${{ secrets.ENV_FILE }} > .env.example
         bash laravel_test.sh
       working-directory: laravel-app
 
