--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,7 @@ env:
   IMAGE_TAG: latest
   MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
   MYSQL_DATABASE: ${{ vars.MYSQL_DATABASE }}
+  MYSQL_USER: ${{ MYSQL_USER }}
 
 jobs:
   test-laravel-app:
@@ -22,7 +23,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install and setup laravel dependencies
       run: |
-        cp ${{ secrets.ENV_FILE }} .env.example
+        echo "Running Scripts....."
         bash laravel_test.sh
       working-directory: laravel-app
 
