--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ env:
   IMAGE_TAG: latest
   MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
   MYSQL_DATABASE: ${{ vars.MYSQL_DATABASE }}
-  MYSQL_USER: ${{ MYSQL_USER }}
+  MYSQL_USER: ${{ vars.MYSQL_USER }}
 
 jobs:
   test-laravel-app:
