--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ jobs:
       - run:
           name: Deploy Docker image to EKS cluster
           command: |
-            kubectl create namespace sock-shop
+            # kubectl create namespace sock-shop
             kubectl apply -f sock-shop-kubernetes
             kubectl get services -n sock-shop
 
@@ -200,26 +200,26 @@ workflows:
   version: 2
   project:
     jobs:
-        - init
-        - plan:
-            requires: [init]
-        - hold-apply:
-            type: approval
-            requires: [plan]
-        - apply:
-            requires: [hold-apply]
-        - plan-destroy:
-            requires: [apply]
-        - hold-destroy:
-            type: approval
-            requires: [plan-destroy]
-        - destroy:
-            requires: [hold-destroy]  
+        # - init
+        # - plan:
+        #     requires: [init]
+        # - hold-apply:
+        #     type: approval
+        #     requires: [plan]
+        # - apply:
+        #     requires: [hold-apply]
+        # - plan-destroy:
+        #     requires: [apply]
+        # - hold-destroy:
+        #     type: approval
+        #     requires: [plan-destroy]
+        # - destroy:
+        #     requires: [hold-destroy]  
         # - build-my-app:
         #     requires: [apply]
-        - deploy-my-app:
-            requires: [apply]
-        - sock-shop:
-            requires: [apply]
-        - prometheus:
-            requires: [apply]
+        # - deploy-my-app:
+        #     requires: [apply]
+        - sock-shop
+            # requires: [apply]
+        - prometheus
+            # requires: [apply]
