--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,12 +195,12 @@ jobs:
           name: Deploy Docker image to EKS cluster
           command: |
             kubectl apply -f sock-shop-kubernetes/manifests-monitoring/
-            kubectl delete --all pods -n sock-shop
-            kubectl delete --all services -n sock-shop
-            kubectl delete --all deployments -n sock-shop
-            kubectl delete --all pods -n default
-            kubectl delete --all services -n default
-            kubectl delete --all deployments -n default
+            # kubectl delete --all pods -n sock-shop
+            # kubectl delete --all services -n sock-shop
+            # kubectl delete --all deployments -n sock-shop
+            # kubectl delete --all pods -n default
+            # kubectl delete --all services -n default
+            # kubectl delete --all deployments -n default
             
 workflows:
   version: 2
