--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@3.1.4
+  terraform: circleci/terraform@3.2.0
+  slack: circleci/slack@4.10.1
 commands:
   install_awscli:
       description: Install AWS CLI v2
@@ -151,7 +153,29 @@ jobs:
             kubectl apply -f votingapp-kubernetes
             kubectl get pods
             kubectl get services
-            
+  delete-all-pods:
+    description: Delete all pods
+    steps:
+      - run:
+          name: Install kubectl
+          command: |
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x ./kubectl
+            sudo mv ./kubectl /usr/local/bin/kubectl
+      - run:
+          name: Configure kubectl
+          command: |
+            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - run:
+          name: Delete pods from EKS cluster
+          command: |
+             kubectl delete --all pods -n sock-shop
+             kubectl delete --all services -n sock-shop
+             kubectl delete --all deployments -n sock-shop
+             kubectl delete --all pods -n default
+             kubectl delete --all services -n default
+             kubectl delete --all deployments -n default
+          when: on_fail
   sock-shop:
     docker:
       - image: cimg/python:3.10
@@ -201,31 +225,32 @@ jobs:
             # kubectl delete --all pods -n default
             # kubectl delete --all services -n default
             # kubectl delete --all deployments -n default
+      - delete-all-pods
             
 workflows:
   version: 2
-  project:
+  deploy-apps:
     jobs:
-        # - init
-        # - plan:
-        #     requires: [init]
-        # - hold-apply:
-        #     type: approval
-        #     requires: [plan]
-        # - apply:
-        #     requires: [hold-apply]
-        # - plan-destroy:
-        #     requires: [apply]
-        # - hold-destroy:
-        #     type: approval
-        #     requires: [plan-destroy]
-        # - destroy:
-        #     requires: [hold-destroy]  
-        # - build-my-app:
-        #     requires: [apply]
-        # - deploy-my-app:
-        #     requires: [apply]
+        - init
+        - plan:
+            requires: [init]
+        - hold-apply:
+            type: approval
+            requires: [plan]
+        - apply:
+            requires: [hold-apply]
+        - plan-destroy:
+            requires: [apply]
+        - hold-destroy:
+            type: approval
+            requires: [plan-destroy]
+        - destroy:
+            requires: [hold-destroy]  
+        - build-my-app:
+            requires: [apply]
+        - deploy-my-app:
+            requires: [apply]
         - sock-shop
-            # requires: [apply]
+            requires: [apply]
         - prometheus
-            # requires: [apply]
+            requires: [apply]
