--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,26 +231,26 @@ workflows:
   version: 2
   deploy-apps:
     jobs:
-        - init
-        - plan:
-            requires: [init]
-        - hold-apply:
-            type: approval
-            requires: [plan]
-        - apply:
-            requires: [hold-apply]
-        - plan-destroy:
-            requires: [apply]
-        - hold-destroy:
-            type: approval
-            requires: [plan-destroy]
-        - destroy:
-            requires: [hold-destroy]  
-        - build-my-app:
-            requires: [apply]
-        - deploy-my-app:
-            requires: [apply]
-        - sock-shop:
-            requires: [apply]
-        - prometheus:
-            requires: [apply]
+      #  - init
+      #  - plan:
+      #      requires: [init]
+      #  - hold-apply:
+      #      type: approval
+      #      requires: [plan]
+      #  - apply:
+      #      requires: [hold-apply]
+        - plan-destroy
+      #      requires: [apply]
+        - hold-destroy
+      #      type: approval
+      #      requires: [plan-destroy]
+        - destroy
+      #      requires: [hold-destroy]  
+      #  - build-my-app:
+      #      requires: [apply]
+      #  - deploy-my-app:
+      #      requires: [apply]
+      #  - sock-shop:
+      #      requires: [apply]
+      #  - prometheus:
+      #      requires: [apply]
