--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,11 +241,11 @@ workflows:
       #      requires: [hold-apply]
         - plan-destroy
       #      requires: [apply]
-        - hold-destroy
-      #      type: approval
-      #      requires: [plan-destroy]
-        - destroy
-      #      requires: [hold-destroy]  
+        - hold-destroy:
+            type: approval
+            requires: [plan-destroy]
+        - destroy:
+            requires: [hold-destroy]  
       #  - build-my-app:
       #      requires: [apply]
       #  - deploy-my-app:
