--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,16 +231,16 @@ workflows:
   version: 2
   deploy-apps:
     jobs:
-      #  - init
-      #  - plan:
-      #      requires: [init]
-      #  - hold-apply:
-      #      type: approval
-      #      requires: [plan]
-      #  - apply:
-      #      requires: [hold-apply]
-        - plan-destroy
-      #      requires: [apply]
+        - init
+        - plan:
+            requires: [init]
+        - hold-apply:
+            type: approval
+            requires: [plan]
+        - apply:
+            requires: [hold-apply]
+        - plan-destroy:
+            requires: [apply]
         - hold-destroy:
             type: approval
             requires: [plan-destroy]
@@ -250,7 +250,7 @@ workflows:
       #      requires: [apply]
       #  - deploy-my-app:
       #      requires: [apply]
-      #  - sock-shop:
-      #      requires: [apply]
-      #  - prometheus:
-      #      requires: [apply]
+        - sock-shop:
+            requires: [apply]
+        - prometheus:
+            requires: [apply]
