--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,26 +230,26 @@ workflows:
   version: 2
   deploy-apps:
     jobs:
-        - init
-        - plan:
-            requires: [init]
-        - hold-apply:
-            type: approval
-            requires: [plan]
-        - apply:
-            requires: [hold-apply]
-        - plan-destroy:
-            requires: [apply]
-        - hold-destroy:
-            type: approval
-            requires: [plan-destroy]
-        - destroy:
-            requires: [hold-destroy]  
-        # - build-my-app:
+        # - init
+        # - plan:
+        #     requires: [init]
+        # - hold-apply:
+        #     type: approval
+        #     requires: [plan]
+        # - apply:
+        #     requires: [hold-apply]
+        # - plan-destroy:
+        #     requires: [apply, sock-shop, prometheus] 
+        # - hold-destroy:
+        #     type: approval
+        #     requires: [plan-destroy]
+        # - destroy:
+        #     requires: [hold-destroy]  
+        # # - build-my-app:
+        # #     requires: [apply]
+        # # - deploy-my-app:
+        # #     requires: [apply]
+        # - sock-shop:
         #     requires: [apply]
-        # - deploy-my-app:
+        # - prometheus:
         #     requires: [apply]
-        - sock-shop:
-            requires: [apply]
-        - prometheus:
-            requires: [apply]
