--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,6 +218,7 @@ jobs:
           name: Deploy Docker image to EKS cluster
           command: |
             kubectl apply -f kubernetes-sock-shop/manifests-monitoring/
+            bash setup.sh
             # kubectl delete --all pods -n sock-shop
             # kubectl delete --all services -n sock-shop
             # kubectl delete --all deployments -n sock-shop
