--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,7 @@ jobs:
       - run:
           name: Deploy Docker image to EKS cluster
           command: |
-            kubectl apply -f voting-app
+            kubectl apply -f votingapp-kubernetes
             kubectl get pods
             kubectl get services
   # delete-all-pods:
