--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ workflows:
             requires: [plan-destroy]
         - destroy:
             requires: [hold-destroy]  
-         - build-my-app
+         - build-my-app:
              requires: [apply]
          - deploy-my-app:
               requires: [build-my-app]
