--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,8 @@ jobs:
             kubectl get pods
             kubectl get services
             kubectl get service voting-service -n voting-application
+            kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+
   # delete-all-pods:
   #   description: Delete all pods
   #   steps:
@@ -194,12 +196,15 @@ jobs:
           command: |
             aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
-          name: Deploy Docker image to EKS cluster
+          name: Deploy sock-shop to EKS cluster
           command: |
             kubectl create namespace sock-shop
             kubectl apply -f kubernetes-sock-shop
             sleep 200
             kubectl get services -n sock-shop
+            kubectl get svc -n sock-shop -o jsonpath='{.items[?(@.spec.type=="LoadBalancer")].status.loadBalancer.ingress[0].ip}'
+            kubectl get service -n sock-shop front-end -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
+
 
   prometheus:
     docker:
