--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,18 +81,16 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - checkout
-      - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      # - run:
+      #     name: Install kubectl
+      #     command: |
+      #       curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      #       chmod +x ./kubectl
+      #       sudo mv ./kubectl /usr/local/bin/kubectl
+      # - run:
+      #     name: Configure kubectl
+      #     command: |
+      #       aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
           name: terraform destroy
           command: |
@@ -274,7 +272,7 @@ workflows:
       #     type: approval
       #     requires: [plan-destroy]
       - destroy
-          # requires: [hold-destroy]  
+      #     requires: [hold-destroy]  
       # - build-my-app:
       #     requires: [apply]
       # - deploy-my-app:
