--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,7 +182,7 @@ jobs:
           name: Terraform init
           command: |
             cd terraform-domain/
-            terraform init -input=false
+            terraform init -input=false -var="sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
       - persist_to_workspace:
           root: .
           paths:
@@ -197,7 +197,7 @@ jobs:
           name: Terraform plan
           command: |
             cd terraform-domain/
-            terraform plan -out tf-apply
+            terraform plan -out tf-apply -var="sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
       - persist_to_workspace:
           root: .
           paths:
@@ -213,7 +213,7 @@ jobs:
           name: Terraform apply
           command: |
             cd terraform-domain/
-            terraform apply -auto-approve tf-apply
+            terraform apply -auto-approve tf-apply -var="sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
       - persist_to_workspace:
           root: .
           paths:
@@ -228,7 +228,7 @@ jobs:
           name: terraform create destroy plan
           command: |
             cd terraform-domain/
-            terraform plan -destroy -out tf-destroy 
+            terraform plan -destroy -out tf-destroy -var="sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
       - persist_to_workspace:
           root: .
           paths:
@@ -243,7 +243,7 @@ jobs:
           name: terraform destroy
           command: |
             cd terraform-domain/
-            terraform apply -auto-approve tf-destroy
+            terraform apply -auto-approve tf-destroy -var="sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
       
 
   delete-all-pods:
